# 60days

./: README.md
dropwire/: package-lock.json  package.json  server.js
dropwire/public/: app.js  index.html  style.css
hallah/: fft.py  noises.html  theremin.html  visual_and_filters.html
jj/: apple  mango  tmt.py
rusty/codepet/: Cargo.toml
rusty/codepet/src/: bar.rs  github.rs  main.rs  pet.rs  storage.rs
rusty/nowplaying/: Cargo.toml
rusty/nowplaying/src/: main.rs
rusty/superfly/: Cargo.toml
rusty/superfly/src/: app.rs  fs.rs  main.rs  ui.rs
scan-me/extension/: README.md  background.js  contentScript.js  manifest.json  selector.css
soundviz/: .gitignore  main.py  sound.py
webrtc/: .gitignore  README.md  package-lock.json  package.json  server.js
webrtc/public/: index.html
webrtc/public/css/: style.css
webrtc/public/js/: app.js
